# prox_automigrate

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
prox_automigrate/: arg_parser.py  check_stat_vm.py  config_edit.py  config_send.py  list_storage.py  logic.py  snap_create.py  snap_send.py
prox_automigrate/scripts/: start.py
